# mcp-mtg-assistant

./: README.md  pyproject.toml
src/mcp_server_mtg_assistant/: __main__.py  formatting.py  schemas.py  server.py  services.py
