[project]
name = "mcp-server-mtg-assistant"
version = "0.1.0"
description = "MCP server for MTG Assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["json", "placeholder", "scryfall", "api", "mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-mtg-assistant = "mcp_server_mtg_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_mtg_assistant"] 